add scaffold Micropost user_id:integer post:string && formatted Welcome#index

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Sample_app</title>
+<head/>
+<body>
+<h1>Ruby On Rails App: sample_app</h1>
+<p><em><a href="http://railstutorial.org">RubyOnRails Tutorial</a></em> By</br >
+<strong><a href="http://michaelhartl.com">Michael J. Hartl</a></strong> </br >
+<body/>
+</html>
